fixed search result css bleeding issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 @import './components/designUtils/colors.scss';
 
 * {
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
 }
 
