--- a/src/components/searchBar/SearchBar.scss
+++ b/src/components/searchBar/SearchBar.scss
@@ -1,7 +1,7 @@
 @import '../designUtils/colors.scss';
 
 .searchBar {
-
+    width: 100%;
     input {
         margin: 0 20px;
         height: 40px;
