--- a/src/components/speciesList/SpeciesList.scss
+++ b/src/components/speciesList/SpeciesList.scss
@@ -2,7 +2,7 @@
 
 .speciesList {
     width: 100%;
-    // margin: 0;
+    margin: 0;
     height: 80vh;
     background-color: white;
     overflow-y: scroll;
@@ -10,10 +10,17 @@
     box-shadow: 0px 2px 5px $shadow-gray;
 
     &__noResults {
-        display: table;
+        display: flex;
+        height: 80vh;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
         margin: 0;
         font-weight: 600;
-        padding: 50% 0;
+    }
+
+    .searchbar {
+        width: 100%;
     }
 
     @media only screen and (max-width: 440px) {
